MAJOR CHANGES since JADE 2.2 ($Date$ $Name$)
==========================================================================
- fixed bug in run.bat of the demo because it did not include iiop.jar in
  the CLASSPATH
- Added a sanity check in notifyFailureToSender to avoid NullPointerException 
  when the sender is null
- ACLMessage: removed an additional blank at the end of the content slot.
- MobileAgent example: fixed bug in dealing with the move message

	
MAJOR CHANGES in JADE 2.2 ($Date$ $Name$)
======================================================	
- The class MessageTemplate has been modified in order to allow the
  creation of application-specific templates.
- Integrated the following modifications to the Sniffer Agent provided by 
  Robert Kessler and Griss Martin:
  - The performative is listed above the message line.
  - Above the message line is also truncated versions of the conversationID,
    inreplyto and replywith fields.
  - Messages are colored in the same color if it can be determined to be part
    of the same conversation.  It uses the three fields to "guess" that it is
    all part of the same conversation.
  - The agent box now can take longer names without overflowing spread over 
    2 lines (truncating the name if it exceeds 2 lines).
  - Clicking on the agent box will give you the full name of the agent.
  - The agents boxes at the top do not scroll when you scroll the window, so
    you can see which line is associated with which agent.
  - When the sniffer starts up, it looks for a <agentname>.inf file in the 
    connected directory.  If it doesn't find it there, it looks for the file
    in \<agentname>.inf.  This inf file contains a list of agent names that
    are to be immediately sniffed once the agent is born.  The agent names 
    are listed one name per line.
  - In the same .inf file you can store performative filtering information. 
    If you want all messages to appear then leave it blank.  Otherwise, 